--- a/css/styles.css
+++ b/css/styles.css
@@ -28,10 +28,41 @@ body{
     width: 100%;
     min-width: 320px;
     height: 30vh;
-    background-color: #0A111F;
+    background-color: #002333;
     color: white;
 }
 
+
+.container--aside{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 10vh;
+    margin-top: 20px;
+}
+
+
+.elementos-aside{
+    width: 100px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+
+#gestionIconoBusqueda{
+    display: none;
+}
+
+.elementos-aside img{
+    width: 50%;
+    border-radius: 100%;
+    padding: 5px;
+    border: 3px solid black;
+}
 .container--img-descrition{
     display: flex;
     flex-direction: column;
@@ -39,7 +70,6 @@ body{
     justify-content: center;
     width: 33%;
     height: 30vh;
-    border-right: 1px solid black;
     text-align: center;
     padding: 10px;
     font-style: italic;
@@ -169,36 +199,6 @@ body{
 }
 
 
-.container--aside{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    height: 10vh;
-}
-
-
-.elementos-aside{
-    width: 100px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
-
-
-#gestionIconoBusqueda{
-    display: none;
-}
-
-.elementos-aside img{
-    width: 50%;
-    border-radius: 100%;
-    padding: 5px;
-    border: 3px solid black;
-}
-
 .container--articles{
     display: flex;
     flex-wrap: wrap;
@@ -226,6 +226,8 @@ body{
 .articles img{
     border-radius: 30px;
     width: 100%;
+    height: 100px;
+    object-fit: cover;
 }
 
 .articles article{
